--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tools/m2c"]
 	path = tools/m2c
 	url = https://github.com/matt-kempster/m2c.git
+[submodule "tools/m2ctx"]
+	path = tools/m2ctx
+	url = https://github.com/ethteck/m2ctx.git
